# brad-os

./: .dockerignore  .env.example  .eslintrc.cjs  .gitignore  .mcp.json  .oxlintrc.json  AGENTS.md  BUGS.md  CLAUDE.md  Cargo.toml  README.md  docker-compose.prod.yml  docker-compose.yml  firebase.json  firestore.indexes.json  meditations.md  package-lock.json  package.json  ralph.config.json  requirements.md  vitest.config.ts  vitest.coverage.config.ts  vitest.integration.config.ts  vitest.workspace.ts
.claude/: settings.json
docker/: Dockerfile.prod
docs/: feature-gaps.md  golden-principles.md  index.md  quality-grades.md  tts-kokoro-decision.md
e2e/: global-setup.ts  global-teardown.ts  package.json  playwright.config.ts  tsconfig.json
hooks/: pre-commit  pre-commit-legacy
plans/: e2e-speedup-plan.md  phase-01-scaffolding.md  phase-02-database.md  phase-05-mesocycle.md  phase-10-polish.md
scripts/: arch-lint  assign-store-sections.ts  brad-precommit  brad-run-integration-tests  brad-validate  check-cycling-data.ts  check-node-version.js  check-node-version.test.ts  check-user-subcollections.ts  codemod-print-to-logger.ts  copy-prod-health-to-dev.ts  copy-strava-tokens.ts  count-cycling-activities.ts  count-prod-cycling.ts  deploy-functions.sh  deploy.sh  doctor.sh  doctor.test.ts  ensure-tts.sh  fix-nyt-recipes.ts  (+36 more)
tools/dev-cli/: Cargo.toml
tools/dev-cli/src/: doctor.rs  integration_tests_runner.rs  lib.rs  precommit.rs  qa_start.rs  reporter.rs  runner.rs  setup_ios_testing.rs  timing.rs
tools/dev-cli/src/qa_start/: args.rs  firebase.rs  otel.rs  ports.rs  simulator.rs  state.rs
tools/dev-cli/src/qa_stop/: cli.rs  locks.rs  mod.rs  ports.rs  process_kill.rs  runner.rs  simulator.rs  state.rs
tools/dev-cli/tests/: behavior-matrix.md  doctor_contract.rs  precommit_contract.rs  qa_stop.rs  run_integration_tests_contract.rs  setup_ios_testing.rs  setup_ios_testing_contract.rs  validate_contract.rs
(+504 files in other folders)
