[package]
name = "dev-cli"
version = "0.1.0"
edition = "2021"

[workspace]

[[bin]]
name = "brad-validate"
path = "src/bin/validate.rs"

[[bin]]
name = "brad-precommit"
path = "src/bin/precommit.rs"

[[bin]]
name = "brad-doctor"
path = "src/bin/doctor.rs"

[dependencies]
owo-colors = { version = "4", features = ["supports-colors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"

[dev-dependencies]
tempfile = "3"
