[package]
name = "dev-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "brad-validate"
path = "src/bin/validate.rs"

[[bin]]
name = "brad-run-integration-tests"
path = "src/bin/run_integration_tests.rs"

[[bin]]
name = "brad-setup-ios-testing"
path = "src/bin/setup_ios_testing.rs"

[[bin]]
name = "brad-qa-stop"
path = "src/bin/qa-stop.rs"

[[bin]]
name = "brad-precommit"
path = "src/bin/precommit.rs"

[dependencies]
owo-colors = { version = "4", features = ["supports-colors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ctrlc = "3"
tempfile = "3"
